manifests/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: us-west1-docker.pkg.dev/omega-winter-431704-u5/userport-images-amd64/backend:v0.0.11
        # Command to run Celery worker.
        command: ["celery"]
        args: ["-A", "app.make_celery", "worker", "--loglevel=INFO"]
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5000
