manifests/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  labels:
    name: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: us-west1-docker.pkg.dev/omega-winter-431704-u5/userport-images-amd64/backend:v0.0.89
        resources:
          limits:
            cpu: 500m
            memory: "2Gi"
          requests:
            cpu: 250m
            memory: "1Gi"
        ports:
        - containerPort: 5000
