manifests/flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
  labels:
    name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: us-west1-docker.pkg.dev/omega-winter-431704-u5/userport-images-amd64/backend:v0.0.33
        # Command to run Flower.
        command: ["celery"]
        args: ["-A", "app.make_celery", "flower", "--conf=./app/flowerconfig.py", "--port=5000"]
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 50m
        ports:
        - containerPort: 5000
