manifests/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    name: react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: us-west1-docker.pkg.dev/omega-winter-431704-u5/userport-images-amd64/frontend:v0.0.6
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 500m
        ports:
        - containerPort: 80
