manifests/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        command: ["redis-server"]
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m
        ports:
        - containerPort: 6379
