manifests/flask-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "flask-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
  - port: 80
    targetPort: 5000
