manifests/flower-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: flower-service
  annotations:
    cloud.google.com/backend-config: '{"default": "flower-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: flower
  ports:
  - port: 80
    targetPort: 5000
