manifests/react-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort
  selector:
    app: react
  ports:
  - port: 80
    targetPort: 80
